--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,11 +1,37 @@
-<%= tag.div id: dom_id(listing) do %>
-<%=turbo_stream_from listing%>
+<%= link_to listing, id: dom_id(listing), class: "m-3 p-4 block no-underline rounded hover:bg-gray-100 bg-white rounded-lg overflow-hidden min-w-48 max-w-64" do %>
 
-<div class="grid grid-cols-8 items-center py-4">
+<div class="relative">
+    <%if listing.images.attached?%>
+    <%= image_tag listing.images[0], class: "uploaded-image w-74 rounded" %>
+    <%else%>
+    <img class="w-74 rounded" src="https://images.unsplash.com/photo-1598228723793-52759bba239c?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Product Image">
+    <%end%>
+    <div class="absolute top-0 right-0 bg-red-500 text-white px-2 py-1 m-2 rounded-md text-sm font-medium">
+        <%if ((Date.today.to_time - listing.created_at)/(24*60*60)).to_i > 1%>
+        <%= ((Date.today.to_time - listing.created_at)/(24*60*60)).to_i %> <%= "days on Villow"%>
+        <%else%>
+        <%= "New Today"%>
+        <%end%>
+    </div>
+</div>
+<div class="p-1">
+    <div>
+        $<%= listing.price %>0
+    </div>
+    <h3 class="text-lg font-medium mb-2"><%=listing.title%></h3>
+    <div class="flex items-center justify-between">
+        <span class="text-sm"><%=listing.description%></span>
+        <%
+=begin%>
+        <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">
+            Buy Now
+        </button>
+        <%
+=end%>
+    </div>
+    <div class="text-sm text-gray-500 font-normal">
+        <%= listing.location%>
 
-    <div class="col-span-5">
-
-        <%= listing.title  %>
     </div>
 </div>
 <%end%>
