--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,20 +1,3 @@
-<div class="flex justify-between items-center">
-    <h1> </h1>
-</div>
-
-<%
-=begin%>
-<div id="location" data-controller="geolocation">
-    <%= form_with url: listings_path, method: :get, local: true do %>
-    <%= submit_tag "Search" %>
-    <% end %>
-    <button data-action="geolocation#search">Search Nearby Listings</button>
-</div>
-<%
-=end%>
-
-
-
 <div class="w-full bg-cover bg-center" style="height:28rem; background-image: url(https://images.unsplash.com/photo-1489370321024-e0410ad08da4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D; ">
     <div class="justify-center h-full w-full bg-blue-900 bg-opacity-10">
         <div class="pt-40 text-center">
@@ -73,7 +56,7 @@
 
     <% else %>
 
-    <div class="flex flex-wrap">
+    <div class="flex flex-wrap items-center justify-center">
         <%=  render @listings %>
     </div>
     <% end %>
