--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,4 +1,4 @@
-<div class="prose mx-auto px-5">
+<div class="prose mx-auto px-5" id="chat-messages" data-chat-room-id="<%= @chat_room.id %>">
     <%
 =begin%>
     <h1>Chat with <%= @chat_room.seller == current_user ? @chat_room.buyer.name : @chat_room.seller.name %></h1>
@@ -8,11 +8,11 @@
 
     <h2>Messages</h2>
 
-    <% @chat_room.messages.each do |message| %>
-    <p><strong><%= message.user.email %>:</strong> <%= message.content %></p>
-    <% end %>
-
-
+    <div id="messages">
+        <% @chat_room.messages.each do |message| %>
+        <p><strong><%= message.user.name %>:</strong> <%= message.content %> <small><%= message.created_at%> </small></p>
+        <% end %>
+    </div>
     <%
 =begin%>
     <%= form_with url: chat_room_messages_path(@chat_room), local: true do |form| %>
@@ -26,4 +26,5 @@
     <%= form.text_area :content, placeholder: "Type your message here..." %>
     <%= form.submit "Send Message" %>
     <% end %>
+
 </div>
