--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,6 +1,6 @@
-<div class="w-full bg-cover bg-center" style="height:28rem; background-image: url(https://images.unsplash.com/photo-1489370321024-e0410ad08da4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D; ">
+<div class="w-full bg-cover bg-center" style="height:24rem; background-image: url(https://images.unsplash.com/photo-1720239337521-e98ce85a1f16?q=80&w=2832&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D; ">
     <div class="justify-center h-full w-full bg-blue-900 bg-opacity-10">
-        <div class="pt-40 text-center">
+        <div class="pt-20 text-center">
 
             <div class="max-w-2xl mx-auto" id="location" data-controller="geolocation">
                 <form class="flex items-center">
@@ -21,7 +21,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                         </svg>Search</button>
                     <% end %>
-                    <button data-action="geolocation#search" class="pt-4 pr-20 text-white text-lg ">Search Nearby Listings</button>
+                    <button data-action="geolocation#search" class="pt-4 pr-20 text-white text-lg font-bold underline">Search Nearby Listings</button>
             </div>
 
 
