--- a/app/views/chat_rooms/_chat_room.html.erb
+++ b/app/views/chat_rooms/_chat_room.html.erb
@@ -1,3 +1,30 @@
-<div>
+<%
+=begin%>
+<div class="">
     <%= link_to chat_room.name, chat_room %>
 </div>
+<%
+=end%>
+
+<ul role="list" class="divide-y divide-gray-100 px-3 border-b-2">
+    <li class="flex justify-between gap-x-6 py-5">
+        <div class="flex min-w-0 gap-x-4">
+            <div class="min-w-0 flex-auto">
+                <p class="text-sm font-semibold leading-6 text-gray-900">
+                    <%= link_to chat_room.name, chat_room %>
+                </p>
+                <%
+=begin%>
+                <p class="mt-1 truncate text-xs leading-5 text-gray-500">leslie.alexander@example.com</p>
+                <%
+=end%>
+            </div>
+        </div>
+        <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+            <p class="text-sm leading-6 text-gray-900">
+                <%=@Listing.user.name%>
+            </p>
+            <p class="mt-1 text-xs leading-5 text-gray-500">Last seen <time datetime="2023-01-23T13:23Z">3h ago</time></p>
+        </div>
+    </li>
+</ul>
