--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -1,8 +1,17 @@
-<div class="prose mx-auto px-5">
-    <h1 class="font-bold text-4xl">All messages</h1>
+<div class="prose mx-auto border-t-2 ">
     <% if @chat_rooms.any?%>
-    <%= render @chat_rooms%>
+    <div class="grid grid-cols-8">
+        <div class="col-span-2 bg-white">
+            <h1 class=" font-bold text-xl p-3 border-b-2">All messages</h1>
+
+            <%= render @chat_rooms%>
+        </div>
+        <div class="col-span-6">
+            <%= @show_messages_view.html_safe %>
+        </div>
+    </div>
     <% else %>
+    <h1 class="font-bold text-4xl">All messages</h1>
     <p>There are no messages.</p>
     <% end %>
 </div>
