--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,4 @@
-<div class="prose max-w-3xl m-20">
+<div class="prose m-20">
     <% if @listing.images.attached? %>
     <div class="flex justify-between space-x-8">
         <div id="controls-carousel" class="relative w-full data-carousel=" static">
@@ -47,7 +47,7 @@
 
     <div class="grid grid-cols-4 gap-8 mt-4">
 
-        <div class="bg-white rounded-lg border my-4 mx-6 w-full col-span-3">
+        <div class="bg-white rounded-lg border my-4 w-full col-span-3">
             <div class="px-4 py-5 sm:px-6">
                 <h3 class="text-lg leading-6 font-medium text-gray-900">
                     Agent
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <div class="bg-white rounded-lg border my-4 mx-6 w-full m-auto flex flex-col items-center justify-center">
+        <div class="bg-white rounded-lg border my-4 w-full m-auto flex flex-col items-center justify-center">
             <%if user_signed_in? && @listing.user_id != current_user.id%>
             <div class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose m-10" href="#">
                 <%= button_to "Contact Agent", chat_rooms_path(listing_id: @listing.id), method: :post if user_signed_in? && @listing.user_id != current_user.id %>
@@ -118,7 +118,7 @@
 
     </div>
 
-    <div class="w-full bg-white rounded-lg border p-2 my-4 mx-6">
+    <div class="w-full bg-white rounded-lg border p-2 my-4">
         <h3 class="font-bold m-3">Comments</h3>
 
         <%if @listing.comments.any?%>
