--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -6,6 +6,7 @@
             <div>
                 <div class="message__author">
                     <%= message.user.name %>
+                    <% puts message.user.name %>
                 </div>
                 <div class="message__timestamp">
                     <%= message.created_at.strftime("%H:%M:%S") %>
