--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,166 +1,176 @@
 <div class="prose m-20">
-    <% if @listing.images.attached? %>
-    <div class="flex justify-between space-x-8">
-        <div id="controls-carousel" class="relative w-full data-carousel=" static">
-            <!-- Carousel wrapper -->
-            <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-                <% @listing.images.each_with_index do |image, index| %>
-                <div class="<%= index.zero? ? 'block' : 'hidden' %> duration-700 ease-in-out" data-carousel-item="<%= index.zero? ? 'active' : '' %>">
-                    <%
-=begin%>
-                    <img src="<%= image.url %>" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="Listing Image <%= index + 1 %>">
-                    <%
-=end%>
-                    <%= image_tag image, class: "uploaded-image absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" %>
+    <div class="flex flex-col">
+        <div id="controls-carousel google-maps" class=" grid grid-cols-2 gap-8 relative w-full data-carousel=" static">
+            <div>
+                <!-- Carousel wrapper -->
+                <% if @listing.images.attached? %>
+                <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                    <div id="default-carousel" class="relative w-full" data-carousel="slide">
+                        <!-- Carousel wrapper -->
+                        <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+                            <% if @listing.images.present? %>
+                            <% @listing.images.each_with_index do |image, index| %>
+                            <div class="<%= index.zero? ? 'block' : 'hidden' %> duration-700 ease-in-out" data-carousel-item>
+                                <%= image_tag image, class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg object-cover" %>
+                            </div>
+                            <% end %>
+                            <% else %>
+                            <p class="text-center text-gray-500">No images uploaded.</p>
+                            <% end %>
+                        </div>
+
+                        <!-- Slider indicators -->
+                        <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3">
+                            <% @listing.images.each_with_index do |_, index| %>
+                            <button type="button" class="w-3 h-3 rounded-full bg-gray-300" aria-current="<%= index.zero? %>" aria-label="Slide <%= index + 1 %>" data-carousel-slide-to="<%= index %>"></button>
+                            <% end %>
+                        </div>
+
+                        <!-- Slider controls -->
+                        <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+                            <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white">
+                                <svg class="w-4 h-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4" />
+                                </svg>
+                                <span class="sr-only">Previous</span>
+                            </span>
+                        </button>
+                        <button type="button" class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+                            <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white">
+                                <svg class="w-4 h-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                                </svg>
+                                <span class="sr-only">Next</span>
+                            </span>
+                        </button>
+                    </div>
+
                 </div>
+                <% else %>
+                <p>No images uploaded.</p>
                 <% end %>
             </div>
-            <!-- Slider controls -->
-            <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
-                <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                    <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4" />
-                    </svg>
-                    <span class="sr-only">Previous</span>
-                </span>
-            </button>
-            <button type="button" class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
-                <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
-                    <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
-                    </svg>
-                    <span class="sr-only">Next</span>
-                </span>
-            </button>
+
+            <div class="rounded-lg" id="map" data-controller="google-maps" data-google-maps-latitude="<%= @listing.latitude %>" data-google-maps-longitude="<%= @listing.longitude %>" data-google-maps-title="<%= @listing.title %>" style="height: 400px; width: 100%; rounded: "></div>
         </div>
 
-        <%
-=begin%>
-        <% end %>
-        <%
-=end%>
-        <% else %>
-        <p>No images uploaded.</p>
-        <% end %>
-        <div class="rounded-lg" id="map" data-controller="google-maps" data-google-maps-latitude="<%= @listing.latitude %>" data-google-maps-longitude="<%= @listing.longitude %>" data-google-maps-title="<%= @listing.title %>" style="height: 400px; width: 100%; rounded: "></div>
-    </div>
+        <div class="grid grid-cols-4 gap-8 mt-4">
 
-    <div class="grid grid-cols-4 gap-8 mt-4">
-
-        <div class="bg-white rounded-lg border my-4 w-full col-span-3">
-            <div class="px-4 py-5 sm:px-6">
-                <h3 class="text-lg leading-6 font-medium text-gray-900">
-                    Agent
-                </h3>
-                <p class="mt-1 max-w-2xl text-sm text-gray-500">
-                <h1><%=@user.name%></h1>
-
-                </p>
-            </div>
-            <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
-                <dl class="sm:divide-y sm:divide-gray-200">
-                    <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">
-                            Full name
-                        </dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                            <h1><%=@listing.title%></h1>
-
-                        </dd>
-                    </div>
-                    <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">
-                            Email address
-                        </dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                            <h1>$<%=@listing.price%>0</h1>
-                        </dd>
-                    </div>
-                    <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">
-                            Address
-                        </dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                            <h1><%=@listing.location%></h1>
-
-                        </dd>
-                    </div>
-                    <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                        <dt class="text-sm font-medium text-gray-500">
-                            Description
-                        </dt>
-                        <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                            <%= @listing.description%>
-
-
-                        </dd>
-                    </div>
-                </dl>
-            </div>
-        </div>
-
-        <div class="bg-white rounded-lg border my-4 w-full m-auto flex flex-col items-center justify-center">
-            <%if user_signed_in? && @listing.user_id != current_user.id%>
-            <div class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose m-10" href="#">
-                <%= button_to "Contact Agent", chat_rooms_path(listing_id: @listing.id), method: :post if user_signed_in? && @listing.user_id != current_user.id %>
-            </div>
-            <div class="bg-white border-2 border-blue-500 hidden lg:inline-block py-2 px-6 hover:bg-grey-100 text-sm text-blue-500 font-bold rounded-xl transition duration-200 prose m-10" href="#">
-                <%= button_to "Request a tour", chat_rooms_path(listing_id: @listing.id), method: :post if user_signed_in? && @listing.user_id != current_user.id %>
-            </div>
-            <%else%>
-            <div class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose my-3">
-                <%= link_to "Edit", edit_listing_path(@listing) if user_signed_in? && @listing.user_id == current_user.id %>
-            </div>
-            <%end%>
-
-        </div>
-
-
-    </div>
-
-    <div class="w-full bg-white rounded-lg border p-2 my-4">
-        <h3 class="font-bold m-3">Comments</h3>
-
-        <%if @listing.comments.any?%>
-        <% @listing.comments.each do |comment| %>
-        <div class="flex flex-col">
-            <div class="border rounded-md p-3 mx-3 my-3">
-                <div class="flex gap-3 items-center">
-                    <h3 class="font-bold">
-                        <%= comment.user.email %>
+            <div class="bg-white rounded-lg border my-4 w-full col-span-3">
+                <div class="px-4 py-5 sm:px-6">
+                    <h3 class="text-lg leading-6 font-medium text-gray-900">
+                        Agent
                     </h3>
+                    <p class="mt-1 max-w-2xl text-sm text-gray-500">
+                    <h1><%=@user.name%></h1>
+
+                    </p>
                 </div>
-                <p class="text-gray-600 mt-2"> <%= comment.content %></p>
-            </div>
-        </div>
-        <% end %>
-        <% end %>
+                <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
+                    <dl class="sm:divide-y sm:divide-gray-200">
+                        <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                Full name
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                <h1><%=@listing.title%></h1>
 
-        <%= form_with model: [@listing, Comment.new], local: true do |form| %>
+                            </dd>
+                        </div>
+                        <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                Email address
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                <h1>$<%=@listing.price%>0</h1>
+                            </dd>
+                        </div>
+                        <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                Address
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                <h1><%=@listing.location%></h1>
+
+                            </dd>
+                        </div>
+                        <div class="py-3 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                            <dt class="text-sm font-medium text-gray-500">
+                                Description
+                            </dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                                <%= @listing.description%>
+
+
+                            </dd>
+                        </div>
+                    </dl>
+                </div>
+            </div>
+
+            <div class="bg-white rounded-lg border my-4 w-full m-auto flex flex-col items-center justify-center">
+                <%if user_signed_in? && @listing.user_id != current_user.id%>
+                <div class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose m-10" href="#">
+                    <%= button_to "Contact Agent", chat_rooms_path(listing_id: @listing.id), method: :post if user_signed_in? && @listing.user_id != current_user.id %>
+                </div>
+                <div class="bg-white border-2 border-blue-500 hidden lg:inline-block py-2 px-6 hover:bg-grey-100 text-sm text-blue-500 font-bold rounded-xl transition duration-200 prose m-10" href="#">
+                    <%= button_to "Request a tour", chat_rooms_path(listing_id: @listing.id), method: :post if user_signed_in? && @listing.user_id != current_user.id %>
+                </div>
+                <%else%>
+                <div class="hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose my-3">
+                    <%= link_to "Edit", edit_listing_path(@listing) if user_signed_in? && @listing.user_id == current_user.id %>
+                </div>
+                <%end%>
+
+            </div>
+
+
+        </div>
+
+        <div class="w-full bg-white rounded-lg border p-2 my-4">
+            <h3 class="font-bold m-3">Comments</h3>
+
+            <%if @listing.comments.any?%>
+            <% @listing.comments.each do |comment| %>
+            <div class="flex flex-col">
+                <div class="border rounded-md p-3 mx-3 my-3">
+                    <div class="flex gap-3 items-center">
+                        <h3 class="font-bold">
+                            <%= comment.user.email %>
+                        </h3>
+                    </div>
+                    <p class="text-gray-600 mt-2"> <%= comment.content %></p>
+                </div>
+            </div>
+            <% end %>
+            <% end %>
+
+            <%= form_with model: [@listing, Comment.new], local: true do |form| %>
+            <div>
+                <div class="w-full px-3 my-2">
+                    <%= form.text_area :content, class:"bg-gray-100 rounded border border-gray-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white"%>
+                </div>
+            </div>
+            <div class="w-full flex justify-end px-3">
+                <%= form.submit 'Post Comment', class:"hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose my-3" %> </div>
+            <% end %>
+
+        </div>
+
+        <p>Average Rating: <%= Rating.average_rating_for(@user) == 0 ? 'Be the first to rate this agent.' : Rating.average_rating_for(@user) %></p>
+
+        <h2>Leave a Rating:</h2>
+        <%= form_with model: [@listing, Rating.new], url: listing_ratings_path(@listing), local: true do |form| %>
         <div>
-            <div class="w-full px-3 my-2">
-                <%= form.text_area :content, class:"bg-gray-100 rounded border border-gray-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white"%>
-            </div>
+            <%= form.label :rating, 'Rate this agent (1-5)' %>
+            <%= form.number_field :rating, in: 1..5 %>
         </div>
-        <div class="w-full flex justify-end px-3">
-            <%= form.submit 'Post Comment', class:"hidden lg:inline-block py-2 px-6 bg-blue-500 hover:bg-blue-600 text-sm text-white font-bold rounded-xl transition duration-200 prose my-3" %> </div>
+        <div>
+            <%= form.submit 'Submit Rating' %>
+        </div>
         <% end %>
 
+
+
     </div>
-
-    <p>Average Rating: <%= Rating.average_rating_for(@user) == 0 ? 'Be the first to rate this agent.' : Rating.average_rating_for(@user) %></p>
-
-    <h2>Leave a Rating:</h2>
-    <%= form_with model: [@listing, Rating.new], url: listing_ratings_path(@listing), local: true do |form| %>
-    <div>
-        <%= form.label :rating, 'Rate this agent (1-5)' %>
-        <%= form.number_field :rating, in: 1..5 %>
-    </div>
-    <div>
-        <%= form.submit 'Submit Rating' %>
-    </div>
-    <% end %>
-
-
-
 </div>
