--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,7 +11,8 @@
                             <% if @listing.images.present? %>
                             <% @listing.images.each_with_index do |image, index| %>
                             <div class="<%= index.zero? ? 'block' : 'hidden' %> duration-700 ease-in-out" data-carousel-item>
-                                <%= image_tag image, class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg object-cover" %>
+                                <%= image_tag "https://real-estate-web-app.s3.us-east-2.amazonaws.com/8pv46r0wkyorpb80060nnrxeglgj", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 rounded-lg object-cover" %>
+
                             </div>
                             <% end %>
                             <% else %>
